修复代码以适应 Java 17